fix: fixed elements with z-index property

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
   max-height: 200px;
   max-width: 300px;
   margin: 0 auto;
-   text-align: center;
+  text-align: center;
   z-index:100;
 }
 
@@ -19,13 +19,13 @@ body {
   position: relative
   border-radius: 4%;
   height: 350px;
-  z-index:101;
 }
 
 #name {
   text-align: center;
   font-size: 33px;
   color: white;
+  z-index:100;
 }
 
 nav {
@@ -193,12 +193,12 @@ nav a:hover {
 
 .stars {
   background:#000 url(../images/stars.png) repeat top center;
-  z-index:0;
+  z-index:-2;
 }
 
 .twinkling {
   background:transparent url(../images/twinkling.png) repeat top center;
-  z-index:1;
+  z-index:-1;
 
   -moz-animation:move-twink-back 200s linear infinite;
   -ms-animation:move-twink-back 200s linear infinite;
